css/main.css
/* ==========================================================================
   custom styles
   ========================================================================== */

#fpLogo {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
#fpCopyright {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}
.footer{
    padding: 10px 15px;
    background-color: #f5f5f5;
    margin-bottom: 0;
    border-bottom-right-radius: 3px;
    border-bottom-left-radius: 3px
}
#repHeader {
    text-align: center;
}
#repParagraph {
    text-align: center;
}
#repLogo {
    margin-left: auto;
    margin-right: auto;
    margin-top: 50px;
}
#formContainer {
    margin-left: auto;
    margin-right: auto;
}
#myForm {
    float: none;
    margin-left: auto;
    margin-right: auto;
}
#repFooter {
    margin-top: 5%;
    min-height: 50px;
    background-color: #333333;
}
#repCopyright {
    padding-top: 1%;
    padding-bottom: 1%;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
    line-height: 1.5;
    color: white;
    text-align: center;
}
#ErrorHeader {
    text-align: center;
}
#ErrorBody {
    text-align: center;
}
#popBackground {
    position: fixed;
    width: 100%;
    height: 900px;
    top: 0;
    left: 0;
    background: #000;
    opacity: 0.8;
    z-index: 1000;
    cursor: pointer;
    display: none;
}
#popBox {
    position: absolute;
    background: brown;
    left: 30%;
    right: 30%;
    margin-top: 100px;
    padding: 20px;
    z-index: 1500;
    display: none;
    border-radius: 10px 10px 10px 10px;
}
#close {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    border: 1px solid ghostwhite;
    text-align: center;
    line-height: 25px;
    font-size: 25px;
    float: right;
    color: ghostwhite;
}
#errorText {
    text-align: center;
    line-height: 30px;
    font-size: 18px;
    float: left;
    margin-right: 20px;
    color: ghostwhite;
}
#errorLine {
    margin-top: 30px;
}
#errorType {
    text-align: center;
    line-height: 30px;
    font-size: 30px;
    float: left;
    margin-right: 20px;
    color: ghostwhite;
}
.ItemCategories {
    display: inline;
}
#GreetingsRep {
    text-align: center;
}
#GreetingsUser {
  font-size: 18px;
color: azure;
}

